src/objects/Project_Budget_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipLabel>Project Budget</relationshipLabel>
        <relationshipName>R00N30000000uAX5EAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Project Budget Detail</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Project Budget Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Budget Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>